Make sure, mindmap overflows correctly with scrollbars

--- a/src/mindmapr/Mindmapr.css
+++ b/src/mindmapr/Mindmapr.css
@@ -1,15 +1,22 @@
-.mindmaprContainer {
+.mindmaprScrollContainer {
     display: flex;
     width: 100%;
     height: 100%;
     overflow: auto;
     position: relative;
 }
+.innerMindmaprContainer {
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 .centerItem {
     z-index: 2;
-    display: flex;
-    align-items: center;
 }
 
 .centerItem:focus {
@@ -22,7 +29,6 @@
 
 .leftContainer{
     margin-right: 15px;
-    display: flex;
     flex-direction: column;
     align-items: flex-end;
 }
